# griptape-nodes-library-minimax

./: LICENSE  Makefile  README.md  griptape-nodes-library.json  pyproject.toml
minimax/: griptape_nodes_library.json  minimax_first_last_frame_to_video.py  minimax_image_to_image.py  minimax_image_to_video.py  minimax_music_generation.py  minimax_text_to_image.py  minimax_text_to_video.py
